math-core/tests/snapshots/wiki_test__wiki116.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\underbrace{ a+b+\\cdots+z }_{26}"
---
<math>
    <munder>
        <munder>
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
                <mo>+</mo>
                <mrow>
                    <mspace width="0.16666667em"/>
                    <mo lspace="0" rspace="0">·</mo>
                    <mo>·</mo>
                    <mo lspace="0" rspace="0">·</mo>
                    <mspace width="0.16666667em"/>
                </mrow>
                <mo>+</mo>
                <mi>z</mi>
            </mrow>
            <mo>⏟</mo>
        </munder>
        <mn>26</mn>
    </munder>
</math>
