math-core/tests/snapshots/wiki_test__wiki121.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\dbinom{n}{k}"
---
<math>
    <mrow>
        <mo>(</mo>
        <mfrac linethickness="0" displaystyle="true">
            <mi>n</mi>
            <mi>k</mi>
        </mfrac>
        <mo>)</mo>
    </mrow>
</math>
