math-core/tests/snapshots/wiki_test__wiki125.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\begin{bmatrix} 0 & \\cdots & 0 \\\\ \\vdots & \\ddots & \\vdots \\\\ 0 & \\cdots & 0 \\end{bmatrix}"
---
<math>
    <mrow>
        <mo>[</mo>
        <mtable>
            <mtr>
                <mtd>
                    <mn>0</mn>
                </mtd>
                <mtd>
                    <mrow>
                        <mspace width="0.16666667em"/>
                        <mo lspace="0" rspace="0">·</mo>
                        <mo>·</mo>
                        <mo lspace="0" rspace="0">·</mo>
                        <mspace width="0.16666667em"/>
                    </mrow>
                </mtd>
                <mtd>
                    <mn>0</mn>
                </mtd>
            </mtr>
            <mtr>
                <mtd>
                    <mo rspace="0">⋮</mo>
                </mtd>
                <mtd>
                    <mo rspace="0">⋱</mo>
                </mtd>
                <mtd>
                    <mo>⋮</mo>
                </mtd>
            </mtr>
            <mtr>
                <mtd>
                    <mn>0</mn>
                </mtd>
                <mtd>
                    <mrow>
                        <mspace width="0.16666667em"/>
                        <mo lspace="0" rspace="0">·</mo>
                        <mo>·</mo>
                        <mo lspace="0" rspace="0">·</mo>
                        <mspace width="0.16666667em"/>
                    </mrow>
                </mtd>
                <mtd>
                    <mn>0</mn>
                </mtd>
            </mtr>
        </mtable>
        <mo>]</mo>
    </mrow>
</math>
